# src/JsonApiDotNetCore.OpenApi.Swashbuckle/JsonApiSchemaIdSelector.cs
@@ -30,13 +30,13 @@ internal sealed class JsonApiSchemaIdSelector
     {
         [typeof(CreateRequestDocument<>)] = "Create [ResourceName] Request Document",
         [typeof(UpdateRequestDocument<>)] = "Update [ResourceName] Request Document",
-        [typeof(DataInCreateRequest)] = "Data In Create Request",
+        [typeof(ResourceInCreateRequest)] = "Resource In Create Request",
         [typeof(DataInCreateRequest<>)] = "Data In Create [ResourceName] Request",
         [typeof(AttributesInCreateRequest)] = "Attributes In Create Request",
         [typeof(AttributesInCreateRequest<>)] = "Attributes In Create [ResourceName] Request",
         [typeof(RelationshipsInCreateRequest)] = "Relationships In Create Request",
         [typeof(RelationshipsInCreateRequest<>)] = "Relationships In Create [ResourceName] Request",
-        [typeof(DataInUpdateRequest)] = "Data In Update Request",
+        [typeof(ResourceInUpdateRequest)] = "Resource In Update Request",
         [typeof(DataInUpdateRequest<>)] = "Data In Update [ResourceName] Request",
         [typeof(AttributesInUpdateRequest)] = "Attributes In Update Request",
         [typeof(AttributesInUpdateRequest<>)] = "Attributes In Update [ResourceName] Request",
@@ -55,7 +55,7 @@ internal sealed class JsonApiSchemaIdSelector
         [typeof(ToOneInResponse<>)] = "To One [ResourceName] In Response",
         [typeof(NullableToOneInResponse<>)] = "Nullable To One [ResourceName] In Response",
         [typeof(ToManyInResponse<>)] = "To Many [ResourceName] In Response",
-        [typeof(DataInResponse)] = "Data In Response",
+        [typeof(ResourceInResponse)] = "Resource In Response",
         [typeof(DataInResponse<>)] = "Data In [ResourceName] Response",
         [typeof(AttributesInResponse<>)] = "Attributes In [ResourceName] Response",
         [typeof(RelationshipsInResponse<>)] = "Relationships In [ResourceName] Response",
